{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 250,
  "lineage": "ae9123e4-8008-e6a6-4d27-0eee7f4b0d7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:security-group/sg-0dcd9827eb102d234",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcd9827eb102d234",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-20250325150753275100000001",
            "name_prefix": "web-",
            "owner_id": "831926616791",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e41e62c6aea2dd46"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:security-group/sg-023de4531aa4dec02",
            "description": "Allow communication between EKS nodes and control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023de4531aa4dec02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "name": "eks-node-security-group",
            "name_prefix": "",
            "owner_id": "831926616791",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "t_my_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012d37c4ed77c3cf4",
            "arn": "arn:aws:ec2:eu-west-1:831926616791:elastic-ip/eipalloc-012d37c4ed77c3cf4",
            "domain": "vpc",
            "id": "eipalloc-012d37c4ed77c3cf4",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-73-140-165.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.73.140.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "t_my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:internet-gateway/igw-09a93f0733df1cd6e",
            "id": "igw-09a93f0733df1cd6e",
            "owner_id": "831926616791",
            "tags": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "t_my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012d37c4ed77c3cf4",
            "association_id": "eipassoc-06d9f20eeeb960fa1",
            "connectivity_type": "public",
            "id": "nat-0ffb5c95a81074b9d",
            "network_interface_id": "eni-0a9ca825419eaaca8",
            "private_ip": "10.0.1.109",
            "public_ip": "54.73.140.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d5c211b2e9bde5fb",
            "tags": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-nat-gateway",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:route-table/rtb-0aadd245e4fa63bd5",
            "id": "rtb-0aadd245e4fa63bd5",
            "owner_id": "831926616791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ffb5c95a81074b9d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "t_my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:route-table/rtb-09e2271799b48dfd2",
            "id": "rtb-09e2271799b48dfd2",
            "owner_id": "831926616791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09a93f0733df1cd6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-public-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6e625ec73ca8c94",
            "route_table_id": "rtb-0aadd245e4fa63bd5",
            "subnet_id": "subnet-0a7240581c04a89c3"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_3",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_private_route_table_assoc_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08faa8a44f938742c",
            "route_table_id": "rtb-0aadd245e4fa63bd5",
            "subnet_id": "subnet-0846fa37f9dc878bc"
          },
          "dependencies": [
            "module.subnets.aws_eip.t_my_nat_eip",
            "module.subnets.aws_nat_gateway.t_my_nat_gateway",
            "module.subnets.aws_route_table.t_my_private_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.subnets.aws_subnet.t_my_subnet_4",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0401c5184faffc54b",
            "route_table_id": "rtb-09e2271799b48dfd2",
            "subnet_id": "subnet-0d5c211b2e9bde5fb"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_1",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t_my_public_route_table_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18abf33730d4658",
            "route_table_id": "rtb-09e2271799b48dfd2",
            "subnet_id": "subnet-0ff8c6b2bb20051c2"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.t_my_igw",
            "module.subnets.aws_route_table.t_my_public_route_table",
            "module.subnets.aws_subnet.t_my_subnet_2",
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0d5c211b2e9bde5fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5c211b2e9bde5fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0ff8c6b2bb20051c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff8c6b2bb20051c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0a7240581c04a89c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7240581c04a89c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t_my_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:subnet/subnet-0846fa37f9dc878bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0846fa37f9dc878bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926616791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry-subnet-4",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0681710c7b23a9ff6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.t_my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "t_my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:831926616791:vpc/vpc-0681710c7b23a9ff6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0adcf3252ecb73a30",
            "default_route_table_id": "rtb-032ca52e77970121d",
            "default_security_group_id": "sg-0c960537f93fe1bb3",
            "dhcp_options_id": "dopt-03c98e4d0f7f48393",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0681710c7b23a9ff6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032ca52e77970121d",
            "owner_id": "831926616791",
            "tags": {
              "Name": "demo_sabry",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "demo_sabry",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}